--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,132 @@
 	box-sizing: border-box;
 }
 
-html {
-	font-size: 62.5%;
-}
-
 :root {
 	--dark-cyan: hsl(158, 36%, 37%);
 	--cream: hsl(30, 38%, 92%);
 	--very-dark-blue: hsl(212, 21%, 14%);
 	--dark-grayish-blue: hsl(228, 12%, 48%);
 	--white: hsl(0, 0%, 100%);
+}
+
+html {
+	font-size: 62.5%;
+}
+
+body {
+	font-size: 1.4rem;
+}
+
+main {
+	display: grid;
+	place-items: center;
+	
+	width: 100%;
+	height: 100vh;
+	background-color: var(--cream);
+	
+	padding: 0 1.5rem;
+}
+
+.card-component {
+	width: 100%;
+	max-width: 375px;
+	background-color: var(--white);
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	border-radius: 1rem;
+}
+
+.card-component img{
+	width: 100%;
+	border-radius: 1rem 1rem 0 0;
+}
+
+.card-component__product-info {
+	font-family: "Montserrat";
+	padding: 0 2.5rem;
+	color: var(--dark-grayish-blue);
+}
+
+.card-component__product-info span {
+	display: block;
+
+	letter-spacing: 0.5rem;
+
+	font-size: 1.2rem;
+
+	margin-bottom: 1rem;
+	margin-top: 2rem;
+}
+
+.card-component__product-description {
+	margin-bottom: 2rem;
+}
+
+.card-component__product-description h1 {
+	font-family: "Fraunces";
+	font-weight: bold;
+	font-size: 3.4rem;
+
+	line-height: 3.5rem;
+
+	color:black; 
+
+	margin-bottom: 1.5rem;
+}
+
+.card-component__product-description p {
+	line-height: 2.5rem;
+}
+
+.card-component__price {
+	display: flex;
+	align-items: center;
+
+	margin-bottom: 1.5rem;
+}
+
+.card-component__price h1 {
+	font-family: "Fraunces";
+	font-weight: bold;
+	font-size: 3.4rem;
+
+	color: var(--dark-cyan);
+	margin-right: 2rem;
+}
+
+.card-component__price p {
+	text-decoration: line-through;
+}
+
+.card-button {
+	width: 100%;
+	height: 4.5rem;
+	margin-bottom: 2.5rem;
+
+	font-family: "Montserrat";
+	font-weight: bold;
+	color: var(--white);
+
+	border: none;
+	background-color: var(--dark-cyan);
+	border-radius: 0.8rem;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	cursor: pointer;
+}
+
+.card-button:hover {
+	background-color: var(--very-dark-blue);
+}
+
+.card-button img{
+	width: 1.5rem;
+	margin-right: 1rem;
 }
