--- a/styles.css
+++ b/styles.css
@@ -27,31 +27,41 @@ main {
 	width: 100%;
 	height: 100vh;
 	background-color: var(--cream);
-	
-	padding: 0 1.5rem;
 }
 
 .card-component {
-	width: 100%;
-	max-width: 375px;
-	background-color: var(--white);
+	width: 92.5%;
+	height: auto;
+	max-width: 700px;
 
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
-	border-radius: 1rem;
 }
 
-.card-component img{
+.card-component .image-container {
 	width: 100%;
+	height: auto;
+}
+
+.card-component .card-component__image {
+	max-width: 100%;
+	max-height: 100%;
+	display: block;
 	border-radius: 1rem 1rem 0 0;
 }
 
 .card-component__product-info {
 	font-family: "Montserrat";
-	padding: 0 2.5rem;
 	color: var(--dark-grayish-blue);
+
+	width: 100%;
+	height: auto;
+	
+	background-color: var(--white);
+	
+	padding: 0 2.5rem;
+	border-radius: 0 0 1rem 1rem;
 }
 
 .card-component__product-info span {
@@ -125,11 +135,10 @@ main {
 	cursor: pointer;
 }
 
-.card-button:hover {
-	background-color: var(--very-dark-blue);
+.card-button img {
+	margin-right: 1rem;
 }
 
-.card-button img{
-	width: 1.5rem;
-	margin-right: 1rem;
+.card-button:hover {
+	background-color: var(--very-dark-blue);
 }
