--- a/styles.css
+++ b/styles.css
@@ -20,43 +20,47 @@ body {
 	font-size: 1.4rem;
 }
 
-main {
-	display: grid;
-	place-items: center;
-	
+.container {
 	width: 100%;
 	height: 100vh;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
 	background-color: var(--cream);
 }
 
 .card-component {
 	width: 92.5%;
-	height: auto;
-	max-width: 700px;
+	height: 100%;
 
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	max-width: 650px;
+	
+	padding: 1rem 0.5rem 1rem;
 }
 
-.card-component .image-container {
+ .card-component__image {
 	width: 100%;
-	height: auto;
-}
+	height: 40%;
+	background-image: url("./images/image-product-mobile.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 
-.card-component .card-component__image {
-	max-width: 100%;
-	max-height: 100%;
-	display: block;
 	border-radius: 1rem 1rem 0 0;
 }
 
 .card-component__product-info {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+
 	font-family: "Montserrat";
 	color: var(--dark-grayish-blue);
 
 	width: 100%;
-	height: auto;
+	height: 60%;
 	
 	background-color: var(--white);
 	
@@ -64,11 +68,8 @@ main {
 	border-radius: 0 0 1rem 1rem;
 }
 
-.card-component__product-info span {
-	display: block;
-
+.card-component__product-info p:nth-child(1) {
 	letter-spacing: 0.5rem;
-
 	font-size: 1.2rem;
 
 	margin-bottom: 1rem;
@@ -82,7 +83,7 @@ main {
 .card-component__product-description h1 {
 	font-family: "Fraunces";
 	font-weight: bold;
-	font-size: 3.4rem;
+	font-size: 3.2rem;
 
 	line-height: 3.5rem;
 
@@ -105,7 +106,7 @@ main {
 .card-component__price h1 {
 	font-family: "Fraunces";
 	font-weight: bold;
-	font-size: 3.4rem;
+	font-size: 3.2rem;
 
 	color: var(--dark-cyan);
 	margin-right: 2rem;
@@ -114,6 +115,7 @@ main {
 .card-component__price p {
 	text-decoration: line-through;
 }
+
 
 .card-button {
 	width: 100%;
